Fixes spacing

--- a/packages/web/src/pages/collection-page/components/desktop/CollectionPage.module.css
+++ b/packages/web/src/pages/collection-page/components/desktop/CollectionPage.module.css
@@ -3,7 +3,7 @@
 }
 
 .pageContent {
-  max-width: calc(1080px + 16px) !important;
+  max-width: calc(1080px + var(--unit-4)) !important;
 }
 
 /* Body Content Wrapper */
